@@ -14,6 +14,8 @@
 
 	* nsd/connio.c: Clarify Ns_ConnWriteVData with Ns_SetVec.
 
+	* nsd/connio.c: Reorder the functions. No code change.
+
 2008-10-01  Stephen Deasey  <sdeasey@users.sf.net>
 
 	* include/ns.h:
